# girelay

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
.github/: pull_request_template.md
crates/girelay/: Cargo.toml  LICENSE
crates/girelay/src/: analysis.rs  clean.rs  cli.rs  config.rs  errors.rs  git.rs  main.rs  merge.rs  output.rs  recover.rs  report.rs  session.rs  setup.rs  status.rs  task.rs  workspace.rs  workspace_lock.rs
crates/girelay/tests/: integration.rs
crates/girelay/tests/integration/: v2_cli.rs  v2_contracts.rs  v2_coordination.rs  v2_lifecycle.rs  v2_process.rs  v2_reports.rs  v2_safety.rs
crates/girelay/tests/integration/common/: mod.rs
docs/: README.md  adapter-contract.md  agent-compatibility.md  agent-integrations.md  agent-workflow.md  commands.md  comparison.md  concepts.md  configuration.md  debian.md  demo-video-guide.md  installation.md  json-api.md  limitations.md  quick-start.md  recovery.md  releasing.md  roadmap.md  safety.md  threat-model.md  troubleshooting.md
schemas/: archive-manifest.schema.json  clean-plan.schema.json  lock.schema.json  merge-plan.schema.json  merge.schema.json  recovery.schema.json  report.schema.json  session.schema.json  status.schema.json  task.schema.json
scripts/: agent-live-matrix.sh  agent-matrix.sh  check-agent-artifacts.cjs  check-links.cjs  demo.sh  dogfood.sh  install.sh  package-check.sh  package-deb.sh  package-release.sh  public-surface-check.cjs  public-surface-check.sh  record-multi-agent-demo.sh  release-check.sh  validate.sh  (+5 more)
(+27 files in other folders)
